# thorvg

./: e --interactive HEAD~10  meson_options.txt  tvg_file.tvg
inc/: meson.build  thorvg.h  thorvg_capi.h  tvgTvgHelper.h
src/: meson.build
src/bindings/capi/: thorvg_capi.h  tvgCapi.cpp
src/examples/: AnimateMasking.cpp  Blending.cpp  BlendingModes.cpp  ColorMasking.cpp  Masking.cpp  Scene.cpp  Svg.cpp  Tvg.cpp  TvgLoader.cpp  TvgLoaderTimeBench.cpp  TvgSaver.cpp  TvgSaverTimeBench.cpp  TvgStorerLoader.cpp  meson.build  pliczek.tvg
src/examples/images/: canvas.tvg  canvas_old.tvg  pliczek.tvg  tvg_file.tvg
src/lib/: d  meson.build  tvgCanvas.cpp  tvgCanvasImpl.h  tvgCommon.h  tvgFill.cpp  tvgFill.h  tvgInitializer.cpp  tvgLinearGradient.cpp  tvgLoaderMgr.cpp  tvgLoaderMgr.h  tvgPaint.cpp  tvgPaint.h  tvgPicture.cpp  tvgPictureImpl.h  tvgRadialGradient.cpp  tvgRender.cpp  tvgRender.h  tvgSaver.cpp  tvgSaver.h  tvgSaverImpl.h  tvgSaverMgr.cpp  tvgSaverMgr.h  tvgScene.cpp  tvgSceneImpl.h  tvgShape.cpp  tvgShapeImpl.h  tvgSwCanvas.cpp  tvgTaskScheduler.cpp  tvgTaskScheduler.h  tvgTvgHelper.h  tvgTvgHelper2.h
src/lib/sw_engine/: tvgSwCommon.h  tvgSwFill.cpp  tvgSwImage.cpp  tvgSwMemPool.cpp  tvgSwRaster.cpp  tvgSwRenderer.cpp  tvgSwRle.cpp  tvgSwShape.cpp  tvgSwStroke.cpp
src/loaders/: meson.build
src/loaders/raw/: tvgRawLoader.cpp  tvgRawLoader.h
src/loaders/svg/: tvgSvgLoader.cpp  tvgSvgLoader.h  tvgSvgLoader.h.rej
src/loaders/tvg/: meson.build  tvgTvgLoadParser.cpp  tvgTvgLoadParser.h  tvgTvgLoader.cpp  (+1 more)
src/storers/: meson.build
test/: testPicture.cpp
(+5 files in other folders)
