option('engines',
   type: 'array',
   choices: ['sw', 'gl'],
   value: ['sw', 'gl'],
   description: 'Enable Rasterizer Engine in thorvg')

option('loaders',
   type: 'array',
   choices: ['', 'svg', 'tvg', 'png'],
   value: ['svg', 'tvg', 'png'],
   description: 'Enable File Loaders in thorvg')

option('vectors',
   type: 'array',
   choices: ['', 'avx'],
   value: [''],
   description: 'Enable CPU Vectorization(SIMD) in thorvg')

option('bindings',
   type: 'array',
   choices: ['', 'capi'],
   value: ['capi'],
   description: 'Enable C API binding')

option('tools',
   type: 'array',
   choices: ['', 'svg2png'],
   value: ['svg2png'],
   description: 'Enable building thorvg tools')

option('examples',
    type: 'boolean',
    value: true,
    description: 'Enable building examples')

option('tests',
   type: 'boolean',
   value: true,
   description: 'Enable building Unit Tests')

option('log',
    type: 'boolean',
    value: true,
    description: 'Enable log message')
